--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,9 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/"
+      "destination": "/portfolio.html"
     }
   ]
 }
+
 
