--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "portfolio.html", "use": "@vercel/static" },
-    { "src": "logoDark.svg", "use": "@vercel/static" },
-    { "src": "logoLight.svg", "use": "@vercel/static" },
-    { "src": "profile.png", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "portfolio.html" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/portfolio.html" }
   ]
 }
-
